@@ -15,5 +15,21 @@
 				</long>
 			</locale>
 		</schema>
+
+		<schema>
+			<key>/schemas/apps/revelation-applet/prefs/menuaction</key>
+			<owner>revelation-applet</owner>
+			<type>string</type>
+			<default>goto</default>
+
+			<locale name="C">
+				<short>Popup-menu account action</short>
+				<long>
+					Action to take when activating an account in the
+					popup-menu.
+				</long>
+			</locale>
+		</schema>
+
 	</schemalist>
 </gconfschemafile>
